# dumdum

./: .gitignore  CMakeLists.txt  README.md
tst/: CMakeLists.txt
tst/BLOB/: CMakeLists.txt  tst_input.hpp  tst_wlib-BLOB.cpp
tst/CRC/: CMakeLists.txt  tst_wlib-crc_16_ccitt_false.cpp  tst_wlib-crc_16_ccitt_zero.cpp  tst_wlib-crc_32.cpp  tst_wlib-crc_64_go_iso.cpp  tst_wlib-crc_8.cpp
tst/Callback/: CMakeLists.txt  tst_wlib-Callback.cpp
tst/Publisher/: CMakeLists.txt  tst_wlib-publisher.cpp
tst/tst_BLOB/: CMakeLists.txt  tst_wlib_BLOB.cpp
tst/tst_CRC/: CMakeLists.txt  tst_wlib_crc_16_ccitt_false.cpp  tst_wlib_crc_16_ccitt_zero.cpp  tst_wlib_crc_32.cpp  tst_wlib_crc_64_go_iso.cpp  tst_wlib_crc_8.cpp
w-lib/: CMakeLists.txt
w-lib/inc/: wlib.hpp
w-lib/wlib_BLOB/: CMakeLists.txt
w-lib/wlib_BLOB/inc/: wlib_BLOB.hpp
w-lib/wlib_BLOB/src/: wlib_BLOB.cpp
w-lib/wlib_CRC/: CMakeLists.txt
w-lib/wlib_CRC/inc/: wlib_CRC.hpp  wlib_CRC_16_ccitt.hpp  wlib_CRC_32.hpp  wlib_CRC_64_go_iso.hpp  wlib_CRC_8.hpp  wlib_CRC_Interface.hpp
w-lib/wlib_CRC/src/: wlib_CRC.cpp  wlib_CRC_16_ccitt.cpp  wlib_CRC_32.cpp  wlib_CRC_64_go_iso.cpp  wlib_CRC_8.cpp
wlib/: CMakeLists.txt
wlib/BLOB/: CMakeLists.txt  README.md
wlib/BLOB/src/: wlib-BLOB.cpp
wlib/CRC/inc/: wlib-CRC_16_ccitt.hpp  wlib-CRC_32.hpp  wlib-CRC_64_go_iso.hpp  wlib-CRC_8.hpp
wlib/Publisher/inc/: wlib-Publisher.hpp
wlib/Publisher/src/: wlib-Publisher.cpp
wlib/inc/: wlib.hpp
